# Solid

./: .gitignore  .gitmodules  .main.cpp.swp  CMakeLists.txt  DevLog.md  README.md  build.sh  build_library.sh  main.cpp  prog  run.sh
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/src/: Application.cpp  SandboxApp.cpp
Solid/: CMakeLists.txt
Solid.xcodeproj/: project.pbxproj
Solid.xcodeproj/project.xcworkspace/xcuserdata/chris.xcuserdatad/: UserInterfaceState.xcuserstate
Solid.xcodeproj/xcshareddata/xcschemes/: Solid.xcscheme
Solid.xcodeproj/xcuserdata/chris.xcuserdatad/xcschemes/: xcschememanagement.plist
Solid/lib/: libSolidEngine.dylib
SolidEngine/: .SolidEngine.cpp.swp  .SolidEngine.hpp.swp  CMakeLists.txt  SolidEngine.cpp  SolidEngine.hpp  SolidEnginePriv.hpp
SolidEngine/examples/: CMakeLists.txt
SolidEngine/include/: Application.hpp  EntryPoint.hpp  Log.hpp  SolidEngine.hpp  sepch.hpp
SolidEngine/include/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
SolidEngine/lib/: libSolidEngine.dylib
SolidEngine/src/: Application.cpp  Log.cpp  SolidEngine.cpp
examples/: main.cpp
include/: SolidEngine.hpp
src/: SolidEngine.cpp
